fix: excerpt text alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -143,6 +143,7 @@ h2, h3, h4, h5, h6, .toc, .nav__title {
 .posts__main .archive__item-excerpt {
     margin-top: -12px;
     font-size: .8em;
+    text-align: left;
 }
 
 /* Scribble page */
